[package]
name = "qukit"
version = "0.0.0-pre3"
description = "a quantum simulator for rust and wasm"
repository = "https://github.com/28Smiles/qukit"
authors = ["Leon Camus <leon.c@gmx.de>"]
edition = "2021"
license = "MIT"

[lib]
name = "qukit"
crate-type = ["cdylib", "rlib"]

[features]
std = []
safe = []
parallel = ["rayon"]
wasm-parallel = ["parallel", "wasm-bindgen-rayon"]
wasm-pack = [ "serde", "wasm-bindgen", "tsify", "wee_alloc", "console_error_panic_hook", "js-sys", "serde-wasm-bindgen" ]
default = [ "std", "parallel" ]

[dependencies]
libm = "0.2"
rayon = { version = "1.5", optional = true }
wasm-bindgen-rayon = { version = "1.0", optional = true }
typenum = "1.15"
bit-array = "0.4"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
tsify = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }

[dev-dependencies]
float-cmp = "0.9"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "fat"
