[package]
name = "qukit"
version = "0.0.0-pre4"
description = "a quantum simulator for rust and wasm"
repository = "https://github.com/28Smiles/qukit"
authors = ["Leon Camus <leon.c@gmx.de>"]
edition = "2021"
license = "MIT"

[lib]
name = "qukit"
crate-type = ["cdylib", "rlib"]

[features]
std = ["rand/std_rng", "rand/std"]
safe = []
parallel = ["rayon"]
wasm-parallel = ["parallel", "wasm-bindgen-rayon"]
wasm-pack = [ "serde", "wasm-bindgen", "tsify", "wee_alloc", "console_error_panic_hook", "js-sys", "serde-wasm-bindgen" ]
default = [ "std", "parallel" ]

[dependencies]
const-trig = "0"
libm = "0"
rayon = { version = "1", optional = true }
wasm-bindgen-rayon = { version = "1", optional = true }
typenum = "1"
bit-array = "0"
spin = "0"
tinyvec = { version = "1", features = ["alloc"] }
paste = "1"
rand = { version = "0", default-features = false, features = ["small_rng"] }
serde = { version = "1", features = ["derive"], optional = true }
wasm-bindgen = { version = "0", features = ["serde-serialize"], optional = true }
tsify = { version = "0", optional = true }
console_error_panic_hook = { version = "0", optional = true }
wee_alloc = { version = "0", optional = true }
js-sys = { version = "0", optional = true }
serde-wasm-bindgen = { version = "0", optional = true }

[dev-dependencies]
float-cmp = "0.9"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "fat"
